--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -16,6 +16,12 @@
 }
 
 header {
+  h1 {
+    @include bp.lt(bp.get(lg)) {
+      display: none;
+    }
+  }
+
   .post-desc {
     @extend %heading;
 
